attempt to fix reference isssue

--- a/Vision.ObjectIdentity/Vision.ObjectIdentity.csproj
+++ b/Vision.ObjectIdentity/Vision.ObjectIdentity.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Data.SqlClient.SNI" Version="5.0.0" />
     <PackageReference Include="Pluralize.NET" Version="1.0.2" />
   </ItemGroup>
 
