--- a/ObjectIdentity/ObjectIdentity.csproj
+++ b/ObjectIdentity/ObjectIdentity.csproj
@@ -19,6 +19,10 @@
   <ItemGroup>
 
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
+
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.4" />
+
+    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.4" />
     
     <PackageReference Include="Pluralize.NET" Version="1.0.2" />
 
