--- a/ObjectIdentity/ObjectIdentity.csproj
+++ b/ObjectIdentity/ObjectIdentity.csproj
@@ -17,15 +17,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.1" />
-
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.4" />
-
     <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.4" />
-    
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.4" />
+    <PackageReference Include="Polly" Version="8.3.0" />
     <PackageReference Include="Pluralize.NET" Version="1.0.2" />
-
+    
   </ItemGroup>
 
 </Project>
