--- a/ObjectIdentity.Tests/ObjectIdentity.Tests.csproj
+++ b/ObjectIdentity.Tests/ObjectIdentity.Tests.csproj
@@ -1,19 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <IsPackable>false</IsPackable>
     <RootNamespace>ObjectIdentity.Tests</RootNamespace>
     <AssemblyName>ObjectIdentity.Tests</AssemblyName>
-    <LangVersion>latestmajor</LangVersion>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="microsoft.extensions.configuration" Version="9.0.4" />
-    <PackageReference Include="microsoft.extensions.configuration.environmentvariables" Version="9.0.4" />
-    <PackageReference Include="microsoft.extensions.configuration.json" Version="9.0.4" />
-    <PackageReference Include="microsoft.extensions.configuration.usersecrets" Version="9.0.4" />
-    <PackageReference Include="MSTest.TestAdapter" Version="3.1.2" />
-    <PackageReference Include="MSTest.TestFramework" Version="3.1.2" />
-    
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0" />
+    <PackageReference Include="MSTest.TestAdapter" Version="3.1.1" />
+    <PackageReference Include="MSTest.TestFramework" Version="3.1.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ObjectIdentity\ObjectIdentity.csproj" />
