--- a/ObjectIdentity.Tests/ObjectIdentity.Tests.csproj
+++ b/ObjectIdentity.Tests/ObjectIdentity.Tests.csproj
@@ -5,6 +5,7 @@
     <RootNamespace>ObjectIdentity.Tests</RootNamespace>
     <AssemblyName>ObjectIdentity.Tests</AssemblyName>
     <LangVersion>latest</LangVersion>
+    <UserSecretsId>objectidentity-tests</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
@@ -17,5 +18,11 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ObjectIdentity\ObjectIdentity.csproj" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
