attempt to fix the build

--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -10,18 +10,20 @@ on:
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
+    env:
+      SQL_PASSWORD: ${{ secrets.SQL_SA_PASSWORD }} # Password used only for test containers in CI
     
     services:
       sql:
         image: mcr.microsoft.com/mssql/server:2019-latest
         env:
-          SA_PASSWORD: ${{ secrets.SQL_SA_PASSWORD }}
+          SA_PASSWORD: ${{ ecrets.SQL_SA_PASSWORD }}
           ACCEPT_EULA: Y
         ports:
           - 1433:1433
         # Health check ensures SQL Server is ready before tests run
         options: >-
-          --health-cmd="/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P ${{ secrets.SQL_SA_PASSWORD }} -Q 'SELECT 1' || exit 1"
+          --health-cmd="/opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P 'P@ssw0rd123!' -Q 'SELECT 1' || exit 1"
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
@@ -48,7 +50,7 @@ jobs:
         sudo apt-get install -y mssql-tools unixodbc-dev
         
         # Create the test database
-        /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P ${{ secrets.SQL_SA_PASSWORD }} -Q "CREATE DATABASE SequentialIdTests"
+        /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P "${{ env.SQL_PASSWORD }}" -Q "CREATE DATABASE SequentialIdTests"
     
     - name: Restore dependencies
       run: dotnet restore
@@ -59,7 +61,7 @@ jobs:
     - name: Test
       run: dotnet test --configuration Release --no-build --verbosity normal
       env:
-        ConnectionStrings__testdb: "Server=localhost;Database=SequentialIdTests;User Id=sa;Password=${{ secrets.SQL_SA_PASSWORD }};TrustServerCertificate=True;"
+        ConnectionStrings__testdb: "Server=localhost;Database=SequentialIdTests;User Id=sa;Password=${{ env.SQL_PASSWORD }};TrustServerCertificate=True;"
     
     - name: Pack
       run: dotnet pack ObjectIdentity/ObjectIdentity.csproj --configuration Release --no-build --output ./nupkgs
