--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -30,21 +30,26 @@ jobs:
           --health-timeout 10s
           --health-retries 10
           --health-start-period 90s
-          - name: Create Test Database
-            run: |
-              # Wait for SQL Server to be ready
-              for i in {1..10}; do
-                /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P \"SecretsAreHandicapped@2025!\" -Q "SELECT 1" && break || sleep 15
-              done
-              
-              # Create the test database
-              /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P \"SecretsAreHandicapped@2025!\" -Q "CREATE DATABASE SequentialIdTests"
+
+      
     
     steps:
     - uses: actions/checkout@v3
       with:
         fetch-depth: 0 # Ensures all history and tags are fetched for versioning
     
+ 
+    - name: Set up SQL Server container
+      run: |
+          docker pull mcr.microsoft.com/mssql/server:2019-CU16-ubuntu-20.04
+          docker run --name sql-server -e "ACCEPT_EULA=Y" -e "SA_PASSWORD=SecretsAreHandicapped@2025!" \
+            -p 1433:1433 -d mcr.microsoft.com/mssql/server:2019-CU16-ubuntu-20.04
+          # Wait for SQL Server to initialize
+          sleep 60
+          # Create the test database
+          docker exec -it sql-server /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P "SecretsAreHandicapped@2025!" \
+            -Q "CREATE DATABASE SequentialIdTests"
+        
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
