--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -39,12 +39,9 @@ jobs:
         fetch-depth: 0 # Ensures all history and tags are fetched for versioning
     
  
-    - name: Set up SQL Server container
+    - name: Set up SQL Test DB
       run: |
-          docker pull mcr.microsoft.com/mssql/server:2019-CU16-ubuntu-20.04
-          docker run --name sql-server -e "ACCEPT_EULA=Y" -e "SA_PASSWORD=SecretsAreHandicapped@2025!" \
-            -p 1433:1433 -d mcr.microsoft.com/mssql/server:2019-CU16-ubuntu-20.04
-          # Wait for SQL Server to initialize
+         # Wait for SQL Server to initialize
           sleep 60
           # Create the test database
           docker exec -it sql-server /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P "SecretsAreHandicapped@2025!" \
