--- a/ObjectIdentity/ObjectIdentity.csproj
+++ b/ObjectIdentity/ObjectIdentity.csproj
@@ -44,8 +44,8 @@
 
 
   <ItemGroup>
-    <None Include="..\README.md" Pack="true" PackagePath="\" />
-    <None Include="..\icon.png" Pack="true" PackagePath="\" Condition="Exists('..\icon.png')" />
+    <None Include="..\README.md" Pack="true" PackagePath="" />
+    <None Include="..\icon.png" Pack="true" PackagePath="" Condition="Exists('..\icon.png')" />
   </ItemGroup>
 
   <!-- Common package references for all frameworks -->
