--- a/ObjectIdentity.Tests/ObjectIdentity.Tests.csproj
+++ b/ObjectIdentity.Tests/ObjectIdentity.Tests.csproj
@@ -8,6 +8,7 @@
     <UserSecretsId>objectidentity-tests</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
